# fw-nrfconnect-nrf

./: CMakeLists.txt  CODEOWNERS  README.rst  west.yml
applications/asset_tracker/src/: main.c
applications/nrf_desktop/: README.rst
applications/pelion_client/: CMakeLists.txt
applications/pelion_client/configuration/common/: ot_config.h
applications/pelion_client/configuration/nrf52840dk_nrf52840/: app_ZDebug.conf  app_ZDebugMbedTLS.conf  config-tls-pelion.h  mcuboot_ZDebugMbedTLS.conf
applications/pelion_client/configuration/nrf9160dk_nrf9160ns/: app_ZDebug.conf
applications/pelion_client/configuration/nrf9160dk_nrf9160ns/boards/: nrf9160dk_nrf9160ns_0_14_0.conf
applications/pelion_client/configuration/nrf9160dk_nrf9160ns/child_image/mcuboot/: prj.conf
applications/pelion_client/configuration/nrf9160dk_nrf9160ns/child_image/mcuboot/boards/: nrf9160dk_nrf9160_0_14_0_ZRelease.conf
applications/pelion_client/configuration/nrf9160dk_nrf9160ns@1.0.0/: app_ZDebug.conf  mcuboot_ZDebug.conf
applications/pelion_client/src/events/: CMakeLists.txt  Kconfig  Kconfig.keep_alive_event  keep_alive_event.c  net_event.c  pelion_event.c
applications/pelion_client/src/modules/: Kconfig.power_manager  net_ot.c
cmake/: boilerplate.cmake  extensions.cmake  mcuboot.cmake  multi_image.cmake  openthread_extensions.cmake  partition_manager.cmake  reports.cmake  zephyr_image.cmake
doc/nrf/: known_issues.rst  links.txt  ug_chip.rst  ug_unity_testing.rst
doc/nrf/releases/: release-notes-0.3.0.rst  release-notes-0.4.0.rst  release-notes-1.0.0.rst  release-notes-1.1.0.rst  release-notes-1.2.0.rst  release-notes-1.2.1.rst  release-notes-1.3.0.rst  release-notes-1.4.0.rst  release-notes-latest.rst
drivers/: CMakeLists.txt  Kconfig
drivers/entropy/: Kconfig
drivers/entropy_cc310/: CMakeLists.txt  Kconfig  entropy_cc310.c
drivers/gps/nrf9160_gps/: nrf9160_gps.c
drivers/mpsl/flash_sync/: Kconfig  flash_sync_mpsl.c
drivers/serial/: uart_nrf_sw_lpuart.c
include/drivers/: gps.h
lib/: CMakeLists.txt  Kconfig
lib/at_cmd/: at_cmd.c
lib/bsdlib/: Kconfig  bsd_os.c  bsdlib.c
lib/edge_impulse/: CMakeLists.ei.template  CMakeLists.txt  Kconfig
lib/lte_link_control/: lte_lc.c
lib/nrf_modem_lib/: Kconfig  nrf91_sockets.c
lib/pelion/: Kconfig
modules/nrfxlib/nrf_802154/: CMakeLists.txt
samples/: CMakeLists.txt
samples/connectedhomeip/lock/: CMakeLists.txt  prj.conf
samples/edge_impulse/: CMakeLists.txt  prj.conf  sample.yaml
samples/edge_impulse/include/: features.h
samples/edge_impulse/src/: main.cpp
samples/nrf9160/at_client/: README.rst
samples/nrf9160/aws_fota/: README.rst
samples/nrf9160/aws_iot/: README.rst  prj.conf
samples/nrf9160/azure_fota/: README.rst
samples/nrf9160/azure_iot_hub/: README.rst  prj.conf
samples/nrf9160/cloud_client/: README.rst  prj.conf
samples/nrf9160/coap_client/: README.rst
samples/nrf9160/download/: README.rst
samples/nrf9160/gps/: README.rst
samples/nrf9160/http_application_update/: CMakeLists.txt  README.rst
samples/nrf9160/https_client/: README.rst
samples/nrf9160/lte_ble_gateway/: README.rst
samples/nrf9160/lwm2m_carrier/: README.rst
samples/nrf9160/lwm2m_client/: README.rst
samples/nrf9160/mqtt_simple/: README.rst
samples/nrf9160/spm/: pm.yml
samples/nrf9160/udp/: README.rst
samples/openthread/cli/: README.rst
samples/openthread/coap_client/: prj.conf
samples/openthread/coap_server/: prj.conf
samples/peripheral/lpuart/: sample.yaml
samples/peripheral/radio_test/: CMakeLists.txt
samples/ses_issue/: CMakeLists.txt
samples/zigbee/ncp/: CMakeLists.txt
scripts/: partition_manager.py  partition_manager_output.py  partition_manager_report.py
scripts/bootloader/: hash.py  provision.py
scripts/partition_manager/: partition_manager.rst
scripts/unity/: func_name_list.py  header_prepare.py
scripts/west_commands/: ncs_commands.py
subsys/: CMakeLists.txt  Kconfig
subsys/bluetooth/: Kconfig
subsys/bluetooth/controller/: hci_driver.c
subsys/bluetooth/rpc/: Kconfig
subsys/bootloader/: CMakeLists.txt  Kconfig  Kconfig.bootloader  bootloader.c  prj.conf
subsys/bootloader/app/: CMakeLists.txt
subsys/bootloader/app_sys/: CMakeLists.txt
subsys/bootloader/bl_crypto/: CMakeLists.txt  Kconfig  bl_crypto.c  bl_crypto_cc310_ecdsa.c  bl_crypto_cc310_hash.c  bl_crypto_cc310_sha256.c  bl_crypto_client.c  bl_crypto_internal.h  bl_crypto_oberon_ecdsa.c  bl_crypto_oberon_hash.c  bl_crypto_oberon_sha256.c
subsys/bootloader/c_runtime_setup/: CMakeLists.txt
subsys/bootloader/cmake/: debug_keys.cmake  fw_info_magic.cmake  fw_metadata.cmake  sign.cmake
subsys/bootloader/debug/: CMakeLists.txt
subsys/bootloader/debug/rtt/: CMakeLists.txt
subsys/bootloader/debug/uart/: nrfx_glue.h
subsys/bootloader/fprotect/: CMakeLists.txt  fprotect_bprot.c
subsys/bootloader/fw_metadata/: CMakeLists.txt  Kconfig  fw_metadata.c
subsys/bootloader/image/: CMakeLists.txt
subsys/bootloader/image/bl_crypto_client/: CMakeLists.txt  bl_crypto_client.c
subsys/bootloader/image/fw_metadata/: Kconfig  fw_metadata.c
subsys/bootloader/include/: bl_crypto.h  bootloader.ld  fw_metadata.h  linker.ld
subsys/bootloader/libc/: CMakeLists.txt
subsys/bootloader/loader/: CMakeLists.txt  custom-sections.ld  pm.json  pm.yaml  prj.conf
subsys/bootloader/loader/src/: bootloader.c
subsys/bootloader/provision/: provision_flash.c
subsys/net/lib/aws_iot/src/: aws_iot.c
subsys/net/lib/azure_iot_hub/src/: azure_iot_hub.c
subsys/net/lib/download_client/: Kconfig
subsys/net/openthread/: Kconfig
subsys/nonsecure/: CMakeLists.txt
subsys/nrf_rpc/: rp_ll.c
subsys/partition_manager/: CMakeLists.txt  Kconfig
subsys/spm/: CMakeLists.txt  Kconfig.spm  pm.yaml  prj.conf
subsys/spm/src/: secure_partition_manager.c
subsys/spu_setup/: CMakeLists.txt  Kconfig  Kconfig.spu  pm.yaml
subsys/spu_setup/src/: spu_setup.c
subsys/zigbee/: Kconfig
subsys/zigbee/osif/: zb_nrf_nvram.c  zb_nrf_platform.c
tests/: CMakeLists.txt  Kconfig
tests/crypto/: testcase.yaml
tests/unity/: CMakeLists.txt
(+54 files in other folders)
